feat(build): fixes

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postBuild": "rm -rf docs/* && cp -r build/* docs",
+    "postbuild": "rm -rf docs/* && cp -r build/* docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
